# TimeMachine

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README_zh.md
.github/workflows/: ci.yml
backend/: .env.example  pyproject.toml  smoke_test.py
backend/app/: config.py  db.py  logging_config.py  main.py  reports.py  schemas.py  transfer.py
backend/app/ai/: bailian_provider.py  base.py  claude_provider.py  gemini_provider.py  openai_compatible_provider.py  openai_provider.py  registry.py
backend/app/ingestion/: pipeline.py  web.py
backend/app/routes/: entries.py  on_this_day.py  reports.py  search.py  settings.py  tags.py  timeline.py  transfer.py
backend/tests/: conftest.py  test_entries_api.py  test_pipeline.py  test_registry.py  test_reports.py  test_search.py  test_suggest_tags.py  test_tags.py  test_transfer.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/components/: AudioPlayer.tsx  CalendarHeatmap.tsx  EntryDrawer.tsx  ErrorBanner.tsx  LanguageToggle.tsx  OnThisDay.tsx  OnboardingCard.tsx  ProcessingTray.tsx  RiverEntry.tsx  SafeSvg.tsx  TagInput.tsx  ThemeToggle.tsx
frontend/src/lib/: date.ts  errors.ts  i18n.tsx  searchHistory.ts  theme.ts
frontend/src/pages/: CapturePage.tsx  ReviewPage.tsx  SearchPage.tsx  SettingsPage.tsx  TimelinePage.tsx
scripts/: release.sh  start.ps1  start.sh
