[project]
name = "aitimemachine-backend"
version = "0.1.0"
description = "AI Time Machine - personal multimodal memory timeline"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pillow>=10.4",
    "sqlite-vec>=0.1.6",
    "anthropic>=0.39",
    "openai>=1.54",
    "google-generativeai>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
